force-app/main/default/objects/SalesRefundHeader__c/SalesRefundHeader__c.object-meta.xml
<CustomObject>
    <label>SalesRefundHeader</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>SalesRefundHeader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesRefundHeaders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>