force-app/main/default/objects/SalesRefundHeader__c/fields/Cancellation_No__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_No__c</fullName>
    <label>Cancellation Txn No.</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>