force-app/main/default/objects/SalesRefundHeader__c/fields/Interest_Payable__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payable__c</fullName>
    <label>Interest Payable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>%Per</fullName>
            </value>
            <value>
                <fullName>Lumpsum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>