force-app/main/default/objects/SalesRefundHeader__c/fields/Net_Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Credited__c</fullName>
    <label>Net Amount Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>