force-app/main/default/objects/SalesRefundHeader__c/fields/Partial_Refund_Customer__c.field-meta.xml
<CustomField>
    <fullName>Partial_Refund_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partial Refund Customer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Opportunity.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SalesRefundHeaders</relationshipLabel>
    <relationshipName>SalesRefundHeaders</relationshipName>
    <type>Lookup</type>
</CustomField>