force-app/main/default/objects/SalesRefundHeader__c/fields/PartialPayment__c.field-meta.xml
<CustomField>
    <fullName>PartialPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartialPayment</label>
    <type>Checkbox</type>
</CustomField>