force-app/main/default/objects/SalesRefundHeader__c/fields/Payable_Interest_Value__c.field-meta.xml
<CustomField>
    <fullName>Payable_Interest_Value__c</fullName>
    <label>Payable Interest Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>