force-app/main/default/objects/SalesRefundHeader__c/fields/PreviousRefundValue__c.field-meta.xml
<CustomField>
    <fullName>PreviousRefundValue__c</fullName>
    <label>PreviousRefundValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>