force-app/main/default/objects/SalesRefundHeader__c/fields/Series_Code__c.field-meta.xml
<CustomField>
    <fullName>Series_Code__c</fullName>
    <label>Series Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>